--- a/functions/src/todo.txt
+++ b/functions/src/todo.txt
@@ -32,7 +32,10 @@
 
 
 검수 ================================================================
+
+>> 배포전 최종 검수
 - db에 모든 권한 체크하기
+- 세컨드브레인 위제 주소 뒤에 userId빼기
 
 >> 확인
     마지막 확인 일시 => 다음 누르면 기록됨
@@ -59,6 +62,7 @@
 //
 // secondbrain api 할일 #todo
 //
+///////////////////////////////////////////////////////////////////////////////////////////////////
 
 
 =======================================================================================================
@@ -66,7 +70,6 @@
 
 - clientId없애고 // userId, userAccessKey로 
 - ios localhost 확인 
-
 - 들어가면 바로 토스트 나오기
 
 
