--- a/functions/src/todo.txt
+++ b/functions/src/todo.txt
@@ -1,34 +1,9 @@
-  
-
 
 제작 ==============================================================
 
 
-
-
-
 메뉴얼 ==============================================================
-- 지식 관리 페이지 설명 추가
-    - 새로운 노트를 만들거나 수정하면 자동으로 AI태깅 작업이 진행됩니다. 
-    - 초기 변환 안내하기
-        - 변환 작업에 시간이 매우 오래 걸려, 기존 노트들을 한번에 변환하지 않습니다. 
-        - 다만, 새로운 노트를 만들거나 페이지가 수정되면 해당 페이지에 대하여 바로 작업 됩니다. 
-    - 초기에 content -> keyword작업 
-        - 오픈 후 : 초기화 후 재생성 : 프로그래스, 수종 작업 버튼, 전체 전환율
-        - 오픈 전 : 
-            - 초기화 후 재생성 작업 없음 // 신규 작업 부터 데이타 반영됨 // 기존 노트 반영은 기다려달라
-            - 설치후에는 10개 페이지만 반영됨 // 한번 버튼 누루면 다시 5개
-            - 노트가 삭제 되었을때
-    - AI 사용 회수 관련 안내
 
-
-
-    - 키워드 데이타 생성 관련 오류 신고
-    - 템플릿 두개 선택 주의 설명
-    - 베타 표시
-    - 안내 : 앱이 업데이트 되면 localhost날아가나 => 인증 완료 되면 -> 연결 다시 하나? / 기존 연결자 되살리기
-    - 키워드 생성작업 않은 노트를 확인하고 추가로 5개의 노트는 변환합니다. 추가 5개 번환하기 버튼(임시) 
-    - 라이트 버전 
 
 
 검수 ================================================================
@@ -68,9 +43,7 @@
 =======================================================================================================
 >>> 마무리
 
-- clientId없애고 // userId, userAccessKey로 
-- ios localhost 확인 
-- 들어가면 바로 토스트 나오기
+- db못찾는 부분 확인하기
 
 
 =======================================================================================================
@@ -83,6 +56,8 @@
 
 
 ======================================================================================================= 1.1차 / 오픈 직후 바로 1주일이내 진행
+- 설명 -> 노션 db연결 변경하기 / 이미 연결된 note db는 연결끊기를 해도 그대로 유지됨
+
 - *** 강제 업데이트
 - 메뉴, 토스트 투명도 높게 
 - ios에서 인증 저장이 안됨/ 비밀번호 인증 방식으로 변경
