--- a/functions/src/todo.txt
+++ b/functions/src/todo.txt
@@ -33,17 +33,16 @@
 
 
 
-////////////////////////////////////////////////////////////////////////////////////////////////////
+///////////////////////////////////////////////////////////////////////////////////////////////////////
 //
 // secondbrain api 할일 #todo
 //
-///////////////////////////////////////////////////////////////////////////////////////////////////
+///////////////////////////////////////////////////////////////////////////////////////////////////////
 
 
 =======================================================================================================
 >>> 마무리
 
-- db못찾는 부분 확인하기
 
 
 =======================================================================================================
@@ -51,11 +50,18 @@
 
 
 
->>> 템플릿 작업
 
 
 
 ======================================================================================================= 1.1차 / 오픈 직후 바로 1주일이내 진행
+- db못찾는 부분 확인하기
+- 키워드의 삭제
+
+- 키워드 추출 동시 실행되지 않게 하기
+- 키워드 추츨 개수 -> 항상 5개가 유지 되게 하려면??
+- 비밀번호 4자리 인증 
+- 노트 리커시브 탑색 뎁스로 막기
+- 작업 끝난 토스트 메세지는 명시적으로 닫기 
 - 설명 -> 노션 db연결 변경하기 / 이미 연결된 note db는 연결끊기를 해도 그대로 유지됨
 
 - *** 강제 업데이트
